created base for random dots and renamed colourfulPaintbrush

--- a/random dots/index.html
+++ b/random dots/index.html
@@ -13,6 +13,6 @@
   </head>
 
   <body>
-    <script src="colourfulPaintbrush.js"></script>
+    <script src="randomDots.js"></script>
   </body>
 </html>
